@@ -23,6 +23,8 @@ class CellRendererText(gtk.GenericCellRenderer):
                 'XAlign', 0, 1, 0, gobject.PARAM_READWRITE),
             'visible': (gobject.TYPE_INT, 'Visible',
                 'Visible', 0, 10, 0, gobject.PARAM_READWRITE),
+            'strikethrough': (gobject.TYPE_BOOLEAN, 'Strikethrough',
+                'Strikethrough', False, gobject.PARAM_WRITABLE),
     }
 
     def __init__(self):
@@ -33,6 +35,9 @@ class CellRendererText(gtk.GenericCellRenderer):
         self.text = self._renderer.get_property('text')
         self.editable = self._renderer.get_property('editable')
         self.visible = True
+
+    def set_sensitive(self, value):
+        return self._renderer.set_sensitive(value)
 
     def do_set_property(self, pspec, value):
         setattr(self, pspec.name, value)
